feat: add line modify operation
